# TexProgLab

./: CLode_monet_new.cpp  CLode_monet_new.h  CMakeLists.txt  Clode_monet.h  README.md  Realization_of_CLode.cpp  Realization_of_clode_monet.cpp  clode_monet.cpp  debug.sh  logger.cpp  logger.h  network_protocol.h  note.txt  server.cpp  test_platform_lab.cpp  utils.h
TestLab/: CLode_monet_new.cpp  CLode_monet_new.h  Realization_of_CLode.cpp  network_protocol.h  server.cpp  utils.h
clode_monet/: Clode_monet.h  Realization_of_clode_monet.cpp  clode_monet.cpp
